feat: add about and service part

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="wrapper header__wrapper">
             <div class="header__logo">
                 <a href="#" class="logo">
-                    <object data="./src/img/logo_vector.svg" type="img/svg+xml">
+                    <object data="./src/img/logo_vector.svg" type="image/svg+xml">
                         Your browser does not support SVG
                     </object>
                 </a>
@@ -48,5 +48,125 @@
             </nav>
         </div>
     </header>
+    <main class="main">
+        <section id="welcome" class="welcome">
+            <div class="wrapper welcome__wrapper">
+                <div class="welcome__aside">
+                    <figure class="welcome__figure">
+                        <img width="449" height="407" src="./src/img/welcome/leafs.png" alt="leafs">
+                    </figure>
+                </div>
+                <div class="welcome__body">
+                    <h2 class="welcome__title">
+                        We grow plants and give you oxygen
+                    </h2>
+                    <p class="welcome__description">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
+                    </p>
+                    <button class="button">
+                        Learn more
+                    </button>
+                </div>
+            </div>
+        </section>
+        <section id="about" class="about">
+            <div class="wrapper about__wrapper">
+                <div class="about__body">
+                    <h3 class="about__title">
+                        We are <strong class="about__title_strong">professional</strong> professional <strong class="about__title_strong">experienced</strong> gardeners
+                    </h3>
+                    <p class="about__description">
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
+                    </p>
+                </div>
+                <div class="about__aside">
+                    <figure class="about__figure">
+                        <img width="464" height="479" src="./src/img/about/houseplant 1.png" alt="houseplant">
+                    </figure>
+                </div>
+            </div>
+        </section>
+        <section id="service" class="service">
+            <div class="wrapper service__wrapper">
+                <div class="service__header">
+                    <h3>Service and our projects</h3>
+                    <div class="service__buttons">
+                        <button class="button button_colored">Gardens</button>
+                        <button class="button button_colored">Lawn</button>
+                        <button class="button button_colored">Planting</button>
+                    </div>
+                </div>
+                <div class="cards">
+                    <article class="card">
+                        <aside class="card__aside">
+                            <figure class="card__figure">
+                                <img width="329" height="350" src="./src/img/service/card-image-1.png" alt="card-image-1">
+                            </figure>
+                        </aside>
+                        <h5 class="card__title">Garden care</h5>
+                        <div class="card__subtitle">
+                            Lorem Ipsum has been the industry
+                        </div>
+                    </article>
+                     <article class="card">
+                        <aside class="card__aside">
+                            <figure class="card__figure">
+                                <img width="329" height="350" src="./src/img/service/card-image-2.png" alt="card-image-2">
+                            </figure>
+                        </aside>
+                        <h5 class="card__title">Planting</h5>
+                        <div class="card__subtitle">
+                            Lorem Ipsum has been the industry
+                        </div>
+                    </article> <article class="card">
+                        <aside class="card__aside">
+                            <figure class="card__figure">
+                                <img width="329" height="350" src="./src/img/service/card-image-3.png" alt="card-image-3">
+                            </figure>
+                        </aside>
+                        <h5 class="card__title">Lawn care</h5>
+                        <div class="card__subtitle">
+                            Lorem Ipsum has been the industry
+                        </div>
+                    </article> <article class="card">
+                        <aside class="card__aside">
+                            <figure class="card__figure">
+                                <img width="329" height="350" src="./src/img/service/card-image-4.png" alt="card-image-4">
+                            </figure>
+                        </aside>
+                        <h5 class="card__title">Planting</h5>
+                        <div class="card__subtitle">
+                            Lorem Ipsum has been the industry
+                        </div>
+                    </article> <article class="card">
+                        <aside class="card__aside">
+                            <figure class="card__figure">
+                                <img width="329" height="350" src="./src/img/service/card-image-5.png" alt="card-image-5">
+                            </figure>
+                        </aside>
+                        <h5 class="card__title">Garden care</h5>
+                        <div class="card__subtitle">
+                            Lorem Ipsum has been the industry
+                        </div>
+                    </article> <article class="card">
+                        <aside class="card__aside">
+                            <figure class="card__figure">
+                                <img width="329" height="350" src="./src/img/service/card-image-6.png" alt="card-image-6">
+                            </figure>
+                        </aside>
+                        <h5 class="card__title">Planting</h5>
+                        <div class="card__subtitle">
+                            Lorem Ipsum has been the industry
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+        <section class="prices">
+            <div class="wrapper prices__wrapper">
+                
+            </div>
+        </section>
+    </main>
 </body>
 </html>
