--- a/index.html
+++ b/index.html
@@ -17,30 +17,30 @@
                 </a>
                 <h1 class="logo__title">Plants</h1>
             </div>
-            <nav class="header-nav">
-                <ul class="header-nav_list">
-                    <li class="header-nav__item">
-                        <a class="header-nav__link" href="#home">
+            <nav class="header__navigation">
+                <ul class="navigation">
+                    <li class="navigation__item">
+                        <a class="navigation__link" href="#home">
                             Home
                         </a>
                     </li>
-                    <li class="header-nav__item">
-                        <a class="header-nav__link" href="#about">
+                    <li class="navigation__item">
+                        <a class="navigation__link" href="#about">
                             About us
                         </a>
                     </li>
-                    <li class="header-nav__item">
-                        <a class="header-nav__link" href="#servise">
+                    <li class="navigation__item">
+                        <a class="navigation__link" href="#servise">
                             Service
                         </a>
                     </li>
-                    <li class="header-nav__item">
-                        <a class="header-nav__link" href="#price">
+                    <li class="navigation__item">
+                        <a class="navigation__link" href="#price">
                             Price
                         </a>
                     </li>
-                    <li class="header-nav__item">
-                        <a class="header-nav__link" href="#contacts">
+                    <li class="navigation__item">
+                        <a class="navigation__link" href="#contacts">
                             Contacts
                         </a>
                     </li>
@@ -51,14 +51,12 @@
     <main class="main">
         <section id="welcome" class="welcome">
             <div class="wrapper welcome__wrapper">
-                <div class="welcome__aside">
-                    <figure class="welcome__figure">
-                        <img width="449" height="407" src="./src/img/welcome/leafs.png" alt="leafs">
-                    </figure>
-                </div>
+                <figure class="welcome__figure">
+                    <img width="449" height="407" src="./src/img/welcome/leafs.png" alt="leafs">
+                </figure>
                 <div class="welcome__body">
                     <h2 class="welcome__title">
-                        We grow plants and give you oxygen
+                        We grow <strong class="strong_bold strong_shadow">plants</strong> and give you oxygen
                     </h2>
                     <p class="welcome__description">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
@@ -73,17 +71,16 @@
             <div class="wrapper about__wrapper">
                 <div class="about__body">
                     <h3 class="about__title">
-                        We are <strong class="about__title_strong">professional</strong> professional <strong class="about__title_strong">experienced</strong> gardeners
+                        We are <strong class="strong_colored">professional</strong> professional 
+                        <strong class="strong_colored">experienced</strong> gardeners
                     </h3>
                     <p class="about__description">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
                     </p>
                 </div>
-                <div class="about__aside">
-                    <figure class="about__figure">
-                        <img width="464" height="479" src="./src/img/about/houseplant 1.png" alt="houseplant">
-                    </figure>
-                </div>
+                <figure class="about__figure">
+                    <img width="464" height="479" src="./src/img/about/houseplant 1.png" alt="houseplant">
+                </figure>
             </div>
         </section>
         <section id="service" class="service">
@@ -118,7 +115,8 @@
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
-                    </article> <article class="card">
+                    </article> 
+                    <article class="card">
                         <aside class="card__aside">
                             <figure class="card__figure">
                                 <img width="329" height="350" src="./src/img/service/card-image-3.png" alt="card-image-3">
@@ -128,7 +126,8 @@
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
-                    </article> <article class="card">
+                    </article> 
+                    <article class="card">
                         <aside class="card__aside">
                             <figure class="card__figure">
                                 <img width="329" height="350" src="./src/img/service/card-image-4.png" alt="card-image-4">
@@ -138,7 +137,8 @@
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
-                    </article> <article class="card">
+                    </article> 
+                    <article class="card">
                         <aside class="card__aside">
                             <figure class="card__figure">
                                 <img width="329" height="350" src="./src/img/service/card-image-5.png" alt="card-image-5">
@@ -148,7 +148,8 @@
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
-                    </article> <article class="card">
+                    </article> 
+                    <article class="card">
                         <aside class="card__aside">
                             <figure class="card__figure">
                                 <img width="329" height="350" src="./src/img/service/card-image-6.png" alt="card-image-6">
@@ -164,9 +165,179 @@
         </section>
         <section class="prices">
             <div class="wrapper prices__wrapper">
-                
+                <div class="prices__accordion">
+                    <h4>Prices</h4>
+                    <div class="accordion">
+                        <div class="accordion__container block-rounded">
+                            <div class="accordion__label">
+                                Basics
+                            </div>
+                            <div class="accordion__content">
+                                <hr>
+                                <p class="accordion__description">
+                                    Release of Letraset sheets containing Lorem Ipsum passages, and more recently
+                                </p>
+                                <span class="accordion__title">
+                                    <strong class="accordion__title_strong">
+                                        15$ 
+                                    </strong>/ per hour</span>
+                                    <button class="button accordion_button">
+                                        Order
+                                    </button>
+                            </div>
+                        </div>
+                        <div class="accordion__container block-rounded">
+                            <div class="accordion__label">
+                                Standard
+                            </div>
+                            <div class="accordion__content">
+                                <hr>
+                                <p class="accordion__description">
+                                    Release of Letraset sheets containing Lorem Ipsum passages, and more recently
+                                </p>
+                                <span class="accordion__title">
+                                    <strong class="accordion__title_strong">
+                                        25$ 
+                                    </strong>/ per hour</span>
+                                    <button class="button accordion_button">
+                                        Order
+                                    </button>
+                            </div>
+                    </div>
+                    <div class="accordion__container block-rounded">
+                            <div class="accordion__label">
+                                Pro care
+                            </div>
+                            <div class="accordion__content">
+                                <hr>
+                                <p class="accordion__description">
+                                    Release of Letraset sheets containing Lorem Ipsum passages, and more recently
+                                </p>
+                                <span class="accordion__title">
+                                    <strong class="accordion__title_strong">
+                                        35$ 
+                                    </strong>/ per hour</span>
+                                    <button class="button accordion_button">
+                                        Order
+                                    </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="prices__contacts">
+                    <h4>Our best 
+                        <strong class="strong_bold">
+                            gardeners
+                        </strong> are ready to help you
+                    </h4>
+                    <button class="button button_colored">
+                        Contact Us
+                    </button>
+                    <figure class="prices__figure">
+                        <img width="152" height="175" src="./src/img/prices/leafs.png" alt="leafs">
+                    </figure>
+                </div>
             </div>
         </section>
+        <section class="contacts">
+            <div class="wrapper contacts__wrapper">
+                <figure class="contacts__figure">
+                    <img width="400" height="496" src="./src/img/contacts/contact_woman 1.png" alt="contact_woman">
+                </figure>
+                <h6>Contact us</h6>
+                <div class="contacts__select">
+                    <select name="sity" id="select">
+                        <option value="Canandaigua">Canandaigua, NY</option>
+                        <div class="select__container block-rounded">
+                            <address>
+                                <div class="contacts__label">Sity</div>
+                                <div>Canandaigua, NY</div>
+                                <div class="contacts__label">Phone</div>
+                                <div>
+                                    <a href="tel:+15853930001">
+                                        +1 585 393 0001
+                                    </a>
+                                </div>
+                                <div class="contacts__label">Office adress:</div>
+                                <div>151 Charlotte Street</div>
+                            </address>
+                            <button class="button contacts_button">
+                                        Call us
+                            </button>
+                        </div>
+                        <option value="New-York-City">New York City</option>
+                        <div class="select__container block-rounded">
+                            <address>
+                                <div class="contacts__label">Sity</div>
+                                <div>New York City</div>
+                                <div class="contacts__label">Phone</div>
+                                <div>
+                                    <a href="tel:+12124560002">
+                                        +1 212 456 0002
+                                    </a>
+                                </div>
+                                <div class="contacts__label">Office adress:</div>
+                                <div>9 East 91st Street</div>
+                            </address>
+                            <button class="button accordion_button">
+                                        Call us
+                            </button>
+                        </div>
+                        <option value="Yonkers">Yonkers, NY</option>
+                        <div class="select__container block-rounded">
+                            <address>
+                                <div class="contacts__label">Sity</div>
+                                <div>Yonkers, NY</div>
+                                <div class="contacts__label">Phone</div>
+                                <div>
+                                    <a href="tel:+19146780003">
+                                        +1 914 678 0003
+                                    </a>
+                                </div>
+                                <div class="contacts__label">Office adress:</div>
+                                <div>511 Warburton Ave</div>
+                            </address>
+                            <button class="button accordion_button">
+                                        Call us
+                            </button>
+                        </div>
+                        <option value="Sherrill">Sherrill, NY</option>
+                        <div class="select__container block-rounded">
+                            <address>
+                                <div class="contacts__label">Sity</div>
+                                <div>Sherrill, NY</div>
+                                <div class="contacts__label">Phone</div>
+                                <div>
+                                    <a href="tel:+13159080004">
+                                        +1 315 908 0004
+                                    </a>
+                                </div>
+                                <div class="contacts__label">Office adress:</div>
+                                <div>14 WEST Noyes BLVD</div>
+                            </address>
+                            <button class="button accordion_button">
+                                        Call us
+                            </button>
+                        </div>
+                    </select>
+                </div>
+            </div>
+        </section>
+        <footer class="footer">
+            <div class="wrapper footer__wrapper">
+                <p class="footer__title">
+                    <span>&#169;</span><span>2022</span>
+                    <a href="https://github.com/and-gurin">github</a>
+                </p>
+                <p class="footer__title">Rolling Scopes School</p>
+                <p>
+                    <a href="#"><span class="ico__instagram"></span></a>
+                    <a href="#"><span class="ico__facebook"></span></a>
+                    <a href="#"><span class="ico__twitter"></span></a>
+                    <a href="#"><span class="ico__pinterest"></span></a>
+                </p>
+            </div>
+        </footer>
     </main>
 </body>
 </html>
