--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Inter:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./src/sass/style.css">
     <title>Plants</title>
 </head>
 <body>
@@ -17,7 +19,6 @@
                         Your browser does not support SVG
                     </object>
                 </a>
-                <h1 class="logo__title">Plants</h1>
             </div>
             <nav class="header__navigation">
                 <ul class="navigation">
@@ -57,9 +58,9 @@
                     <img width="449" height="407" src="./src/img/welcome/leafs.png" alt="leafs">
                 </figure>
                 <div class="welcome__body">
-                    <h2 class="welcome__title">
+                    <h1 class="welcome__title">
                         We grow <strong class="strong_bold strong_shadow">plants</strong> and give you oxygen
-                    </h2>
+                    </h1>
                     <p class="welcome__description">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
                     </p>
@@ -72,10 +73,10 @@
         <section id="about" class="about">
             <div class="wrapper about__wrapper">
                 <div class="about__body">
-                    <h3 class="about__title">
+                    <h2 class="about__title">
                         We are <strong class="strong_colored">professional</strong> professional 
                         <strong class="strong_colored">experienced</strong> gardeners
-                    </h3>
+                    </h2>
                     <p class="about__description">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
                     </p>
@@ -88,7 +89,7 @@
         <section id="service" class="service">
             <div class="wrapper service__wrapper">
                 <div class="service__header">
-                    <h3>Service and our projects</h3>
+                    <h2>Service and our projects</h2>
                     <div class="service__buttons">
                         <button class="button button_colored">Gardens</button>
                         <button class="button button_colored">Lawn</button>
@@ -102,7 +103,7 @@
                                 <img width="329" height="350" src="./src/img/service/card-image-1.png" alt="card-image-1">
                             </figure>
                         </aside>
-                        <h5 class="card__title">Garden care</h5>
+                        <h4 class="card__title">Garden care</h4>
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
@@ -113,7 +114,7 @@
                                 <img width="329" height="350" src="./src/img/service/card-image-2.png" alt="card-image-2">
                             </figure>
                         </aside>
-                        <h5 class="card__title">Planting</h5>
+                        <h4 class="card__title">Planting</h4>
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
@@ -124,7 +125,7 @@
                                 <img width="329" height="350" src="./src/img/service/card-image-3.png" alt="card-image-3">
                             </figure>
                         </aside>
-                        <h5 class="card__title">Lawn care</h5>
+                        <h4 class="card__title">Lawn care</h4>
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
@@ -135,7 +136,7 @@
                                 <img width="329" height="350" src="./src/img/service/card-image-4.png" alt="card-image-4">
                             </figure>
                         </aside>
-                        <h5 class="card__title">Planting</h5>
+                        <h4 class="card__title">Planting</h4>
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
@@ -146,7 +147,7 @@
                                 <img width="329" height="350" src="./src/img/service/card-image-5.png" alt="card-image-5">
                             </figure>
                         </aside>
-                        <h5 class="card__title">Garden care</h5>
+                        <h4 class="card__title">Garden care</h4>
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
@@ -157,7 +158,7 @@
                                 <img width="329" height="350" src="./src/img/service/card-image-6.png" alt="card-image-6">
                             </figure>
                         </aside>
-                        <h5 class="card__title">Planting</h5>
+                        <h4 class="card__title">Planting</h4>
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
@@ -168,12 +169,12 @@
         <section class="prices">
             <div class="wrapper prices__wrapper">
                 <div class="prices__accordion">
-                    <h4>Prices</h4>
+                    <h3>Prices</h3>
                     <div class="accordion">
                         <div class="accordion__container block-rounded">
-                            <div class="accordion__label">
+                            <h4 class="accordion__label">
                                 Basics
-                            </div>
+                            </h4>
                             <div class="accordion__content">
                                 <hr>
                                 <p class="accordion__description">
@@ -189,9 +190,9 @@
                             </div>
                         </div>
                         <div class="accordion__container block-rounded">
-                            <div class="accordion__label">
+                            <h4 class="accordion__label">
                                 Standard
-                            </div>
+                            </h4>
                             <div class="accordion__content">
                                 <hr>
                                 <p class="accordion__description">
@@ -207,9 +208,9 @@
                             </div>
                     </div>
                     <div class="accordion__container block-rounded">
-                            <div class="accordion__label">
+                            <h4 class="accordion__label">
                                 Pro care
-                            </div>
+                            </h4>
                             <div class="accordion__content">
                                 <hr>
                                 <p class="accordion__description">
@@ -227,11 +228,11 @@
                     </div>
                 </div>
                 <div class="prices__contacts">
-                    <h4>Our best 
+                    <h3>Our best 
                         <strong class="strong_bold">
                             gardeners
                         </strong> are ready to help you
-                    </h4>
+                    </h3>
                     <button class="button button_colored">
                         Contact Us
                     </button>
@@ -246,7 +247,7 @@
                 <figure class="contacts__figure">
                     <img width="400" height="496" src="./src/img/contacts/contact_woman 1.png" alt="contact_woman">
                 </figure>
-                <h6>Contact us</h6>
+                <h5>Contact us</h5>
                 <div class="contacts__select">
                     <select name="sity" id="select">
                         <option value="Canandaigua">Canandaigua, NY</option>
