--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <nav class="header__navigation">
                 <ul class="navigation">
                     <li class="navigation__item">
-                        <a class="navigation__link" href="#home">
+                        <a class="navigation__link navigation__link_colored" href="#home">
                             Home
                         </a>
                     </li>
@@ -54,9 +54,7 @@
     <main class="main">
         <section id="welcome" class="welcome">
             <div class="wrapper welcome__wrapper">
-                <figure class="welcome__figure">
-                    <img width="449" height="407" src="./src/img/welcome/leafs.png" alt="leafs">
-                </figure>
+                <img width="449" height="407" src="./src/img/welcome/leafs.png" alt="leafs">
                 <div class="welcome__body">
                     <h1 class="welcome__title">
                         We grow <strong class="strong_bold strong_shadow">plants</strong> and give you oxygen
@@ -64,7 +62,7 @@
                     <p class="welcome__description">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.
                     </p>
-                    <button class="button">
+                    <button class="button button_uppercase">
                         Learn more
                     </button>
                 </div>
@@ -81,9 +79,7 @@
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
                     </p>
                 </div>
-                <figure class="about__figure">
-                    <img width="464" height="479" src="./src/img/about/houseplant 1.png" alt="houseplant">
-                </figure>
+                <img width="464" height="479" src="./src/img/about/houseplant 1.png" alt="houseplant">
             </div>
         </section>
         <section id="service" class="service">
