--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
             <div class="wrapper about__wrapper">
                 <div class="about__body">
                     <h2 class="about__title">
-                        We are <strong class="strong_colored">professional</strong> professional 
-                        <strong class="strong_colored">experienced</strong> gardeners
+                        We are <strong>professional</strong> 
+                        <strong>experienced</strong> gardeners
                     </h2>
                     <p class="about__description">
                         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
@@ -85,7 +85,7 @@
         <section id="service" class="service">
             <div class="wrapper service__wrapper">
                 <div class="service__header">
-                    <h2>Service and our projects</h2>
+                    <h2 class="servise__title">Service and our projects</h2>
                     <div class="service__buttons">
                         <button class="button button_colored">Gardens</button>
                         <button class="button button_colored">Lawn</button>
@@ -95,9 +95,7 @@
                 <div class="cards">
                     <article class="card">
                         <aside class="card__aside">
-                            <figure class="card__figure">
-                                <img width="329" height="350" src="./src/img/service/card-image-1.png" alt="card-image-1">
-                            </figure>
+                            <img width="329" height="350" src="./src/img/service/card-image-1.png" alt="card-image-1">
                         </aside>
                         <h4 class="card__title">Garden care</h4>
                         <div class="card__subtitle">
@@ -106,9 +104,7 @@
                     </article>
                      <article class="card">
                         <aside class="card__aside">
-                            <figure class="card__figure">
-                                <img width="329" height="350" src="./src/img/service/card-image-2.png" alt="card-image-2">
-                            </figure>
+                            <img width="329" height="350" src="./src/img/service/card-image-2.png" alt="card-image-2">
                         </aside>
                         <h4 class="card__title">Planting</h4>
                         <div class="card__subtitle">
@@ -117,9 +113,7 @@
                     </article> 
                     <article class="card">
                         <aside class="card__aside">
-                            <figure class="card__figure">
-                                <img width="329" height="350" src="./src/img/service/card-image-3.png" alt="card-image-3">
-                            </figure>
+                            <img width="329" height="350" src="./src/img/service/card-image-3.png" alt="card-image-3">
                         </aside>
                         <h4 class="card__title">Lawn care</h4>
                         <div class="card__subtitle">
@@ -128,9 +122,7 @@
                     </article> 
                     <article class="card">
                         <aside class="card__aside">
-                            <figure class="card__figure">
-                                <img width="329" height="350" src="./src/img/service/card-image-4.png" alt="card-image-4">
-                            </figure>
+                            <img width="329" height="350" src="./src/img/service/card-image-4.png" alt="card-image-4">
                         </aside>
                         <h4 class="card__title">Planting</h4>
                         <div class="card__subtitle">
@@ -139,9 +131,7 @@
                     </article> 
                     <article class="card">
                         <aside class="card__aside">
-                            <figure class="card__figure">
-                                <img width="329" height="350" src="./src/img/service/card-image-5.png" alt="card-image-5">
-                            </figure>
+                            <img width="329" height="350" src="./src/img/service/card-image-5.png" alt="card-image-5">
                         </aside>
                         <h4 class="card__title">Garden care</h4>
                         <div class="card__subtitle">
@@ -150,9 +140,7 @@
                     </article> 
                     <article class="card">
                         <aside class="card__aside">
-                            <figure class="card__figure">
-                                <img width="329" height="350" src="./src/img/service/card-image-6.png" alt="card-image-6">
-                            </figure>
+                            <img width="329" height="350" src="./src/img/service/card-image-6.png" alt="card-image-6">
                         </aside>
                         <h4 class="card__title">Planting</h4>
                         <div class="card__subtitle">
