feat: add style for service part

--- a/index.html
+++ b/index.html
@@ -84,70 +84,54 @@
         </section>
         <section id="service" class="service">
             <div class="wrapper service__wrapper">
-                <div class="service__header">
-                    <h2 class="servise__title">Service and our projects</h2>
-                    <div class="service__buttons">
-                        <button class="button button_colored">Gardens</button>
-                        <button class="button button_colored">Lawn</button>
-                        <button class="button button_colored">Planting</button>
-                    </div>
+                <h2 class="servise__title">Service and our projects</h2>
+                <div class="service__buttons">
+                    <button class="button button_colored">Gardens</button>
+                    <button class="button button_colored">Lawn</button>
+                    <button class="button button_colored">Planting</button>
                 </div>
-                <div class="cards">
-                    <article class="card">
-                        <aside class="card__aside">
-                            <img width="329" height="350" src="./src/img/service/card-image-1.png" alt="card-image-1">
-                        </aside>
-                        <h4 class="card__title">Garden care</h4>
+                <article class="card card-1">
+                        <img width="329" height="350" src="./src/img/service/card-image-1.png" alt="card-image-1">
+                        <h4>Garden care</h4>
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
                     </article>
-                     <article class="card">
-                        <aside class="card__aside">
-                            <img width="329" height="350" src="./src/img/service/card-image-2.png" alt="card-image-2">
-                        </aside>
-                        <h4 class="card__title">Planting</h4>
+                     <article class="card card-2">
+                        <img width="329" height="350" src="./src/img/service/card-image-2.png" alt="card-image-2">
+                        <h4>Planting</h4>
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
                     </article> 
-                    <article class="card">
-                        <aside class="card__aside">
-                            <img width="329" height="350" src="./src/img/service/card-image-3.png" alt="card-image-3">
-                        </aside>
-                        <h4 class="card__title">Lawn care</h4>
+                    <article class="card card-3">
+                        <img width="329" height="350" src="./src/img/service/card-image-3.png" alt="card-image-3">
+                        <h4>Lawn care</h4>
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
                     </article> 
-                    <article class="card">
-                        <aside class="card__aside">
-                            <img width="329" height="350" src="./src/img/service/card-image-4.png" alt="card-image-4">
-                        </aside>
-                        <h4 class="card__title">Planting</h4>
+                    <article class="card card-4">
+                        <img width="329" height="350" src="./src/img/service/card-image-4.png" alt="card-image-4">
+                        <h4>Planting</h4>
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
                     </article> 
-                    <article class="card">
-                        <aside class="card__aside">
-                            <img width="329" height="350" src="./src/img/service/card-image-5.png" alt="card-image-5">
-                        </aside>
-                        <h4 class="card__title">Garden care</h4>
+                    <article class="card card-5">
+                        <img width="329" height="350" src="./src/img/service/card-image-5.png" alt="card-image-5">
+                        <h4>Garden care</h4>
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
                     </article> 
-                    <article class="card">
-                        <aside class="card__aside">
-                            <img width="329" height="350" src="./src/img/service/card-image-6.png" alt="card-image-6">
-                        </aside>
-                        <h4 class="card__title">Planting</h4>
+                    <article class="card card-6">
+                        <img width="329" height="350" src="./src/img/service/card-image-6.png" alt="card-image-6">
+                        <h4>Planting</h4>
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
                     </article>
-                </div>
             </div>
         </section>
         <section class="prices">
