--- a/index.html
+++ b/index.html
@@ -92,42 +92,42 @@
                 </div>
                 <article class="card card-1">
                         <img width="329" height="350" src="./src/img/service/card-image-1.png" alt="card-image-1">
-                        <h4>Garden care</h4>
+                        <h4 class="servise__title">Garden care</h4>
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
                     </article>
                      <article class="card card-2">
                         <img width="329" height="350" src="./src/img/service/card-image-2.png" alt="card-image-2">
-                        <h4>Planting</h4>
+                        <h4 class="servise__title">Planting</h4>
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
                     </article> 
                     <article class="card card-3">
                         <img width="329" height="350" src="./src/img/service/card-image-3.png" alt="card-image-3">
-                        <h4>Lawn care</h4>
+                        <h4 class="servise__title">Lawn care</h4>
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
                     </article> 
                     <article class="card card-4">
                         <img width="329" height="350" src="./src/img/service/card-image-4.png" alt="card-image-4">
-                        <h4>Planting</h4>
+                        <h4 class="servise__title">Planting</h4>
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
                     </article> 
                     <article class="card card-5">
                         <img width="329" height="350" src="./src/img/service/card-image-5.png" alt="card-image-5">
-                        <h4>Garden care</h4>
+                        <h4 class="servise__title">Garden care</h4>
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
                     </article> 
                     <article class="card card-6">
                         <img width="329" height="350" src="./src/img/service/card-image-6.png" alt="card-image-6">
-                        <h4>Planting</h4>
+                        <h4 class="servise__title">Planting</h4>
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
