--- a/index.html
+++ b/index.html
@@ -140,15 +140,15 @@
                     <h3>Prices</h3>
                     <div class="accordion">
                         <div class="accordion__container block-rounded">
-                            <h4 class="accordion__label">
-                                Basics
-                            </h4>
+                            <div class="accordion__label">
+                                <span class="accordion__title">Basics</span><img class="accordion_img" src="./src/img/icons/accordion_btn_closed.svg" alt="btn_closed">
+                            </div>
                             <div class="accordion__content">
                                 <hr>
                                 <p class="accordion__description">
                                     Release of Letraset sheets containing Lorem Ipsum passages, and more recently
                                 </p>
-                                <span class="accordion__title">
+                                <span class="accordion__subtitle">
                                     <strong class="accordion__title_strong">
                                         15$ 
                                     </strong>/ per hour</span>
@@ -158,9 +158,9 @@
                             </div>
                         </div>
                         <div class="accordion__container block-rounded">
-                            <h4 class="accordion__label">
-                                Standard
-                            </h4>
+                            <div class="accordion__label">
+                                <span class="accordion__title">Standard</span><img src="./src/img/icons/accordion_btn_closed.svg" alt="btn_closed">
+                            </div>
                             <div class="accordion__content">
                                 <hr>
                                 <p class="accordion__description">
@@ -176,9 +176,9 @@
                             </div>
                     </div>
                     <div class="accordion__container block-rounded">
-                            <h4 class="accordion__label">
-                                Pro care
-                            </h4>
+                            <div class="accordion__label">
+                                <span class="accordion__title">Pro care</span><img src="./src/img/icons/accordion_btn_closed.svg" alt="btn_closed">
+                            </div>
                             <div class="accordion__content">
                                 <hr>
                                 <p class="accordion__description">
@@ -195,18 +195,20 @@
                         </div>
                     </div>
                 </div>
-                <div class="prices__contacts">
-                    <h3>Our best 
+                <div class="prices-contacts">
+                    <h3 class="prices-contacts__title">Our best 
                         <strong class="strong_bold">
                             gardeners
                         </strong> are ready to help you
                     </h3>
-                    <button class="button button_colored">
+                    <div class="prices-contacts__button">
+                        <button class="button button_colored button_colored_bg-none">
                         Contact Us
-                    </button>
-                    <figure class="prices__figure">
+                        </button>
+                    </div>
+                    <div class="prices-contacts__img">
                         <img width="152" height="175" src="./src/img/prices/leafs.png" alt="leafs">
-                    </figure>
+                    </div>
                 </div>
             </div>
         </section>
