feat: add style for footer

--- a/index.html
+++ b/index.html
@@ -230,12 +230,20 @@
                     <a href="https://github.com/and-gurin">github</a>
                 </p>
                 <p class="footer__title">Rolling Scopes School</p>
-                <p>
-                    <a href="#"><span class="ico__instagram"></span></a>
-                    <a href="#"><span class="ico__facebook"></span></a>
-                    <a href="#"><span class="ico__twitter"></span></a>
-                    <a href="#"><span class="ico__pinterest"></span></a>
-                </p>
+                <ul class="social">
+                    <li>
+                        <a class="ico__instagram" target="_blank" href="https://www.instagram.com/and_gurin/"><img src="./src/img/icons/instagram.svg" alt="instagram"></a>
+                    </li>
+                    <li>
+                        <a class="ico__facebook" target="_blank" href="https://www.facebook.com/andrei.hurynovich.18/"><img src="./src/img/icons/fb.svg" alt="fb"></a>
+                    </li>
+                    <li>
+                        <a class="ico__twitter" target="_blank" href="https://twitter.com/"><img src="./src/img/icons/twitter.svg" alt="twitter"></a>
+                    </li>
+                    <li>
+                        <a class="ico__pinterest" target="_blank" href="https://www.pinterest.com/"><img src="./src/img/icons/pinterest.svg" alt="pinterest"></a>
+                    </li>
+                </ul>
             </div>
         </footer>
     </main>
