fix: resolve style for header and welcome

--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
         <div class="wrapper header__wrapper">
             <div class="header__logo">
                 <a href="#" class="logo">
-                    <object data="./src/img/logo_vector.svg" type="image/svg+xml">
-                        Your browser does not support SVG
-                    </object>
+                    <img src="./src/img/logo_vector.svg" alt="logo">
                 </a>
             </div>
             <nav class="header__navigation">
                 <ul class="navigation">
                     <li class="navigation__item">
-                        <a class="navigation__link navigation__link_colored" href="#home">
+                        <a class="navigation__link navigation__link_colored" href="#welcome">
                             Home
                         </a>
                     </li>
@@ -33,7 +31,7 @@
                         </a>
                     </li>
                     <li class="navigation__item">
-                        <a class="navigation__link" href="#servise">
+                        <a class="navigation__link" href="#service">
                             Service
                         </a>
                     </li>
@@ -54,7 +52,7 @@
     <main class="main">
         <section id="welcome" class="welcome">
             <div class="wrapper welcome__wrapper">
-                <img width="449" height="407" src="./src/img/welcome/leafs.png" alt="leafs">
+                <img class="welcome__img" width="449" height="407" src="./src/img/welcome/leafs.png" alt="leafs">
                 <div class="welcome__body">
                     <h1 class="welcome__title">
                         We grow <strong class="strong_bold strong_shadow">plants</strong> and give you oxygen
@@ -92,49 +90,49 @@
                 </div>
                 <article class="card card-1">
                         <img width="329" height="350" src="./src/img/service/card-image-1.png" alt="card-image-1">
-                        <h4 class="servise__title">Garden care</h4>
+                        <h4>Garden care</h4>
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
                     </article>
                      <article class="card card-2">
                         <img width="329" height="350" src="./src/img/service/card-image-2.png" alt="card-image-2">
-                        <h4 class="servise__title">Planting</h4>
+                        <h4>Planting</h4>
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
                     </article> 
                     <article class="card card-3">
                         <img width="329" height="350" src="./src/img/service/card-image-3.png" alt="card-image-3">
-                        <h4 class="servise__title">Lawn care</h4>
+                        <h4>Lawn care</h4>
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
                     </article> 
                     <article class="card card-4">
                         <img width="329" height="350" src="./src/img/service/card-image-4.png" alt="card-image-4">
-                        <h4 class="servise__title">Planting</h4>
+                        <h4>Planting</h4>
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
                     </article> 
                     <article class="card card-5">
                         <img width="329" height="350" src="./src/img/service/card-image-5.png" alt="card-image-5">
-                        <h4 class="servise__title">Garden care</h4>
+                        <h4>Garden care</h4>
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
                     </article> 
                     <article class="card card-6">
                         <img width="329" height="350" src="./src/img/service/card-image-6.png" alt="card-image-6">
-                        <h4 class="servise__title">Planting</h4>
+                        <h4>Planting</h4>
                         <div class="card__subtitle">
                             Lorem Ipsum has been the industry
                         </div>
                     </article>
             </div>
         </section>
-        <section class="prices">
+        <section id="price" class="prices">
             <div class="wrapper prices__wrapper">
                 <div class="prices__accordion">
                     <h2 class="prices__title">Prices</h2>
@@ -212,7 +210,7 @@
                 </div>
             </div>
         </section>
-        <section class="contacts">
+        <section id="contacts" class="contacts">
             <div class="wrapper contacts__wrapper">
                 <img width="400" height="496" src="./src/img/contacts/contact_woman.png" alt="contact_woman">
                 <h2 class="contacts__title">Contact us</h2>
