fix: resolve style for footer

--- a/index.html
+++ b/index.html
@@ -223,23 +223,20 @@
         </section>
         <footer class="footer">
             <div class="wrapper footer__wrapper">
-                <p class="footer__title">
-                    <span>&#169;</span><span>2022</span>
-                    <a href="https://github.com/and-gurin">github</a>
-                </p>
-                <p class="footer__title">Rolling Scopes School</p>
+                <a class="footer__title" href="https://github.com/and-gurin">&#169; &nbsp; 2022 &nbsp; github</a>
+                <a target="_blank" href="https://rs.school/js-stage0/" class="footer__title">Rolling Scopes School</a>
                 <ul class="social">
                     <li>
-                        <a class="ico__instagram" target="_blank" href="https://www.instagram.com/and_gurin/"><img src="./src/img/icons/instagram.svg" alt="instagram"></a>
+                        <a class="ico__social" target="_blank" href="https://www.instagram.com/and_gurin/"><img src="./src/img/icons/instagram.svg" alt="instagram"></a>
                     </li>
                     <li>
-                        <a class="ico__facebook" target="_blank" href="https://www.facebook.com/andrei.hurynovich.18/"><img src="./src/img/icons/fb.svg" alt="fb"></a>
+                        <a class="ico__social" target="_blank" href="https://www.facebook.com/andrei.hurynovich.18/"><img src="./src/img/icons/fb.svg" alt="fb"></a>
                     </li>
                     <li>
-                        <a class="ico__twitter" target="_blank" href="https://twitter.com/"><img src="./src/img/icons/twitter.svg" alt="twitter"></a>
+                        <a class="ico__social" target="_blank" href="https://twitter.com/"><img src="./src/img/icons/twitter.svg" alt="twitter"></a>
                     </li>
                     <li>
-                        <a class="ico__pinterest" target="_blank" href="https://www.pinterest.com/"><img src="./src/img/icons/pinterest.svg" alt="pinterest"></a>
+                        <a class="ico__social" target="_blank" href="https://www.pinterest.com/"><img src="./src/img/icons/pinterest.svg" alt="pinterest"></a>
                     </li>
                 </ul>
             </div>
