fix: resolve mistakes in some words

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 <h2 class="contacts__title">Contact us</h2>
                 <div class="drop-down">
                     <div class="drop__label">
-                        <span class="drop__title">Sity</span><img class="drop_img" src="./src/img/icons/drop_btn_unactive.svg" alt="btn_closed">
+                        <span class="drop__title">City</span><img class="drop_img" src="./src/img/icons/drop_btn_unactive.svg" alt="btn_closed">
                     </div>
                 </div>
             </div>
