feat: add burger menu

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
                     <img src="./src/img/logo_vector.svg" alt="logo">
                 </a>
             </div>
+            <span class="hamburger">
+                    <span class="hamburger__line1"></span>
+                    <span class="hamburger__line2"></span>
+                </span>
             <nav class="header__navigation">
                 <ul class="navigation">
                     <li class="navigation__item">
