feat: add adaptive for footer sections

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         <footer class="footer">
             <div class="wrapper footer__wrapper">
                 <a class="footer__title" href="https://github.com/and-gurin">&#169; &nbsp; 2022 &nbsp; github</a>
-                <a target="_blank" href="https://rs.school/js-stage0/" class="footer__title">Rolling Scopes School</a>
+                <a target="_blank" href="https://rs.school/js-stage0/" class="footer__title footer__link">Rolling Scopes School</a>
                 <ul class="social">
                     <li>
                         <a class="ico__social" target="_blank" href="https://www.instagram.com/and_gurin/"><img src="./src/img/icons/instagram.svg" alt="instagram"></a>
