feat: add custom select

--- a/index.html
+++ b/index.html
@@ -234,14 +234,117 @@
         </section>
         <section id="contacts" class="contacts">
             <div class="wrapper contacts__wrapper">
-                <div class="contacts_img">
+                <div class="contacts__img">
+                    <img src="./src/img/contacts/contact_woman.png" alt="contact_woman">
+                </div>
+                <div class="contacts__img_mobile">
                     <img src="./src/img/contacts/contact_woman.png" alt="contact_woman">
                 </div>
                 <h2 class="contacts__title">Contact us</h2>
                 <div class="drop-down">
                     <div class="drop__label">
                         <span class="drop__title">City</span>
-                        <img class="drop_img" src="./src/img/icons/drop_btn_unactive.svg" alt="btn_closed">
+                        <span class="drop__icon"></span>
+                    </div>
+                    <div class="drop__body">
+                        <div class="drop__item">Canandaigua, NY</div>
+                        <div class="drop__item">New York City</div>
+                        <div class="drop__item">Yonkers, NY</div>
+                        <div class="drop__item">Sherrill, NY</div>
+                    </div>
+                    <div class="drop__containers">
+                        <div class="can drop__container">
+                            <address>
+                                <div class="contacts__data">
+                                    <div class="contacts__label">Sity:</div>
+                                    <div class="contacts__source">Canandaigua, NY</div>
+                                </div>
+                                <div class="contacts__data">
+                                    <div class="contacts__label">Phone:</div>
+                                    <div class="contacts__source">
+                                        +1 585 393 0001
+                                    </div> 
+                                </div>
+                                <div class="contacts__data">
+                                    <div class="contacts__label contacts__label_office">Office adress:</div>
+                                    <div class="contacts__source contacts__label_office">151 Charlotte Street</div>
+                                </div>
+                            </address>
+                            <div class="contacts__button">
+                                <button class="button button_contacts">
+                                    <a href="tel:+15853930001">Call us</a>
+                            </button>
+                            </div>
+                        </div>
+                        <div class="new drop__container">
+                            <address>
+                                <div class="contacts__data">
+                                    <div class="contacts__label">Sity:</div>
+                                    <div class="contacts__source">New York City</div>
+                                </div>
+                                <div class="contacts__data">
+                                    <div class="contacts__label">Phone:</div>
+                                    <div class="contacts__source">
+                                        +1 212 456 0002
+                                    </div> 
+                                </div>
+                                <div class="contacts__data">
+                                    <div class="contacts__label contacts__label_office">Office adress:</div>
+                                    <div class="contacts__source">9 East 91st Street</div>
+                                </div>
+                            </address>
+                            <div class="contacts__button">
+                                <button class="button button_contacts">
+                                    <a  href="tel:+12124560002">Call us</a>     
+                            </button>
+                            </div>
+                        </div>
+                        <div class="yon drop__container">
+                            <address>
+                                <div class="contacts__data">
+                                    <div class="contacts__label">Sity:</div>
+                                    <div class="contacts__source">Yonkers NY</div>
+                                </div>
+                                <div class="contacts__data">
+                                    <div class="contacts__label">Phone:</div>
+                                    <div class="contacts__source">
+                                        +1 914 678 0003
+                                    </div> 
+                                </div>
+                                <div class="contacts__data">
+                                    <div class="contacts__label contacts__label_office">Office adress:</div>
+                                    <div class="contacts__source">511 Warburton Ave</div>
+                                </div>
+                            </address>
+                            <div class="contacts__button">
+                                <button class="button button_contacts">
+                                    <a  href="tel:+19146780003">Call us</a>  
+                            </button>
+                            </div>
+                        </div>
+                        <div class="she drop__container">
+                            <address>
+                                <div class="contacts__data">
+                                    <div class="contacts__label">Sity:</div>
+                                    <div class="contacts__source">Sherrill, NY</div>
+                                </div>
+                                <div class="contacts__data">
+                                    <div class="contacts__label">Phone:</div>
+                                    <div class="contacts__source">
+                                        +1 315 908 0004
+                                    </div> 
+                                </div>
+                                <div class="contacts__data">
+                                    <div class="contacts__label contacts__label_office">Office adress:</div>
+                                    <div class="contacts__source">14 WEST Noyes BLVD</div>
+                                </div>
+                            </address>
+                            <div class="contacts__button">
+                                <button class="button button_contacts">
+                                    <a href="tel:+13159080004">Call us</a>
+                            </button>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -269,5 +372,7 @@
     </main>
     <script src="index.js"></script>
     <script src="./src/js/hamburger.js"></script>
+    <script src="./src/js/card-filter-2.js"></script>
+    <script src="./src/js/drop-down.js"></script>
 </body>
 </html>
