feat: add accordion

--- a/index.html
+++ b/index.html
@@ -156,61 +156,64 @@
                 <div class="prices__accordion">
                     <h2 class="prices__title">Prices</h2>
                     <div class="accordion">
-                        <div class="accordion__container block-rounded">
+                        <div class="accordion__container">
                             <div class="accordion__label">
                                 <span class="accordion__title">Basics</span>
                                 <span class="accordion_img"></span>
                             </div>
                             <div class="accordion__content">
-                                <hr>
                                 <p class="accordion__description">
                                     Release of Letraset sheets containing Lorem Ipsum passages, and more recently
                                 </p>
                                 <span class="accordion__subtitle">
-                                    <strong class="accordion__title_strong">
-                                        15$ 
+                                    <strong class="accordion__price">
+                                        $<b>15</b> 
                                     </strong>/ per hour</span>
-                                    <button class="button accordion_button">
-                                        Order
+                                    <div class="accordion__button">
+                                        <button class="button button_accordion">
+                                            <a href="#contacts">Order</a>
                                     </button>
+                                    </div>
                             </div>
                         </div>
-                        <div class="accordion__container block-rounded">
+                        <div class="accordion__container">
                             <div class="accordion__label">
                                 <span class="accordion__title">Standard</span>
                                 <span class="accordion_img"></span>
                             </div>
                             <div class="accordion__content">
-                                <hr>
                                 <p class="accordion__description">
                                     Release of Letraset sheets containing Lorem Ipsum passages, and more recently
                                 </p>
-                                <span class="accordion__title">
-                                    <strong class="accordion__title_strong">
-                                        25$ 
+                                <span class="accordion__subtitle">
+                                    <strong class="accordion__price">
+                                        $<b>25</b> 
                                     </strong>/ per hour</span>
-                                    <button class="button accordion_button">
-                                        Order
+                                    <div class="accordion__button">
+                                        <button class="button button_accordion">
+                                            <a href="#contacts">Order</a>
                                     </button>
+                                    </div>
                             </div>
                     </div>
-                    <div class="accordion__container block-rounded">
+                    <div class="accordion__container">
                             <div class="accordion__label">
                                 <span class="accordion__title">Pro care</span>
                                 <span class="accordion_img"></span>
                             </div>
                             <div class="accordion__content">
-                                <hr>
                                 <p class="accordion__description">
                                     Release of Letraset sheets containing Lorem Ipsum passages, and more recently
                                 </p>
-                                <span class="accordion__title">
-                                    <strong class="accordion__title_strong">
-                                        35$ 
+                                <span class="accordion__subtitle">
+                                    <strong class="accordion__price">
+                                        $<b>35</b> 
                                     </strong>/ per hour</span>
-                                    <button class="button accordion_button">
-                                        Order
+                                    <div class="accordion__button">
+                                        <button class="button button_accordion">
+                                            <a href="#contacts">Order</a>
                                     </button>
+                                    </div>
                             </div>
                         </div>
                     </div>
@@ -374,5 +377,6 @@
     <script src="./src/js/hamburger.js"></script>
     <script src="./src/js/card-filter-2.js"></script>
     <script src="./src/js/drop-down.js"></script>
+    <script src="./src/js/accordion.js"></script>
 </body>
 </html>
