feat: add card filter

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
     </main>
     <script src="index.js"></script>
     <script src="./src/js/hamburger.js"></script>
-    <script src="./src/js/card-filter-2.js"></script>
+    <script src="./src/js/card-filter.js"></script>
     <script src="./src/js/drop-down.js"></script>
     <script src="./src/js/accordion.js"></script>
 </body>
